--- a/数据结构/线性表/线性表实现/线性表实现/线性表实现.vcxproj
+++ b/数据结构/线性表/线性表实现/线性表实现/线性表实现.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Sq_list.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="备用函数.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
