添加了线性实现链表的前面两个函数 1.初始化函数 2.链表输出函数

--- a/数据结构/线性表/线性表实现/线性表实现/线性表实现.vcxproj.filters
+++ b/数据结构/线性表/线性表实现/线性表实现/线性表实现.vcxproj.filters
@@ -22,10 +22,13 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Sq_list.h">
-      <Filter>源文件</Filter>
+      <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="备用函数.h">
-      <Filter>源文件</Filter>
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="lian_list.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
