--- a/数据结构/线性表/线性表实现/线性表实现/线性表实现.vcxproj
+++ b/数据结构/线性表/线性表实现/线性表实现/线性表实现.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="lian_list.h" />
     <ClInclude Include="Sq_list.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
